--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -392,7 +392,7 @@
                                     </tbody>
                                 </table>    
      
-                                <nav align="center" ng-show="staticItemListInScene.length>0">
+                                <!--<nav align="center" ng-show="staticItemListInScene.length>0">
                                     <ul class="pagination">
                                         <li class="disabled"><a href="#" aria-label="Previous">
                                             <span aria-hidden="true">&laquo;</span></a>
@@ -418,7 +418,7 @@
                                           </a>
                                         </li>
                                     </ul>
-                                </nav>
+                                </nav>-->
 
      
                             </div>
@@ -662,7 +662,7 @@
                         </table>
                     
                         
-                    <nav align="center">
+                    <!--<nav align="center">
                         <ul class="pagination">
                             <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                             <li class="active"><a href="#">1</a></li>
@@ -676,7 +676,7 @@
                               </a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav>-->
                 </div>
             </div>
 		</div>
