--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -141,7 +141,7 @@
                                                 ng-click="editMap(map)" ng-show="isMyMap(map.userID.token)">
                                         </button>
                                         
-                                        <button type="button" class="btn btn-primary fa fa-download"></button>
+                                        <!--<button type="button" class="btn btn-primary fa fa-download"></button>-->
                                         
                                         <button type="button" class="btn btn-danger fa fa-trash-o"
                                                 data-toggle="modal" data-target="#deleteMapModal" 
@@ -152,8 +152,7 @@
                             </tbody>
                         </table>
                     
-                        
-                    <nav align="center">
+                    <!--<nav align="center">
                         <ul class="pagination">
                             <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
                             <li class="active"><a href="#">1</a></li>
@@ -167,7 +166,7 @@
                               </a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav>-->
                 </div>
             </div>    
         </div>
