--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -254,12 +254,12 @@
                                     <div class="col-xs-12">
                                         </br>
                                         <label>Static items</label>    
-                                        <input type="file" name='staticItemFile' ng-model="scene.staticItemFile">     
+                                        <input type="file" name="staticItemFile" id="staticItemFile" ng-model="scene.staticItemFile">     
                                         <b>
                                             <i>* File containing these static objects on the map, that is, don't 
                                                 changing geographical position during the simulation
                                             </i>
-                                        </b>    
+                                        </b>
                                     </div>
                                 
                                     <div class="col-xs-12">
