--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -75,7 +75,7 @@
                     <div class="panel-body">      
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Pool name</label>
+                                <label>Parameter set name</label>
                                 <input ng-model="rec.poolName" class="form-control" />
                             </div>
 
