--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -149,7 +149,7 @@
                         </thead>
 
                         <tbody>
-                            <tr ng-repeat="recommender in recommenderList">
+                            <tr ng-repeat="recommender in recommenderList | startFrom:currentPage*pageSize | limitTo:pageSize">
                                 <td>{{recommender.poolName}}</td>
                                 <td>{{recommender.recommenderType}}</td>
                                 <td>{{recommender.strategyType}}</td>
@@ -182,6 +182,30 @@
 
                         </tbody>
                     </table>
+                    
+                    <nav align="center">
+                        <ul class="pagination">
+                            <li ng-disabled="currentPage == 0">
+                                <a href="#/settings" 
+                                   ng-click="previous()"
+                                   aria-label="Previous">
+                                   <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            
+                            <li ng-repeat="pag in pages()" ng-class="{active:pag==currentPage}">
+                                <a href="#/settings" ng-click="setCurrentPage(pag)">{{pag+1}}</a>
+                            </li>
+                            
+                            <li>
+                              <a href="#/settings" 
+                                 ng-click="next()"
+                                 aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                              </a>
+                            </li>
+                        </ul>
+                    </nav>
                     
                     <div class="panel-body">    
                         <p ng-show="recommenderList.length==0">Recommender list empty!</p>    
