--- a/public/views/settings/staticItemSettings.html
+++ b/public/views/settings/staticItemSettings.html
@@ -89,7 +89,7 @@
                         </thead>
                             
                         <tbody>
-                            <tr ng-repeat="staticItem in staticItemList">
+                            <tr ng-repeat="staticItem in staticItemList | startFrom:currentPage*pageSize | limitTo:pageSize">
                                 <td>{{staticItem.name}}</td>
                                 <td><img id="img" width="16" height="16" src="{{staticItem.icon}}" /></td>
                                 <td>
@@ -116,18 +116,26 @@
                             </tr>
 
                         </tbody>
-                    </table>                    
+                    </table>
 
                     <nav align="center" ng-hide="staticItemList.length==0">
                         <ul class="pagination">
-                            <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
+                            <li ng-disabled="currentPage == 0">
+                                <a href="#/settings/staticItemSettings" 
+                                   ng-click="previous()"
+                                   aria-label="Previous">
+                                   <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            
+                            <li ng-repeat="pag in pages()" ng-class="{active:pag==currentPage}">
+                                <a href="#/settings/staticItemSettings" ng-click="setCurrentPage(pag)">{{pag+1}}</a>
+                            </li>
+                            
                             <li>
-                              <a href="#" aria-label="Next">
+                              <a href="#/settings/staticItemSettings" 
+                                 ng-click="next()"
+                                 aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                               </a>
                             </li>
