--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/" ng-click="exit()">Simulator</a>
+                <label class="navbar-brand" >Simulator</label>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
