--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -693,6 +693,19 @@
                                     <br><br>
                                     <input type="submit" ng-click="recomend()" class="btn btn-primary" value="Recommend items">
                                 </div>
+                                
+                                <div class="col-xs-12">
+                                    <br/><br/>
+                                    <label>Legend:</label>
+                                    <ul>
+                                        <li>To position the user have to click on the map</li>
+                                        <li>w: move up</li>
+                                        <li>s: move down</li>
+                                        <li>a: move left</li>
+                                        <li>d: move right</li>
+                                        <li>space bar: start/pause the movement of the user</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
