--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,6 +19,11 @@
     height: 300px;
 }
 
+.littleMap{
+    height: 350px;
+    width: 300px;
+}
+
 .container { border:2px solid #ccc; width:auto; height: 100px; overflow-y: scroll; }
 
 .crearMapa{
